--- a/styles/partials/_hamburger.scss
+++ b/styles/partials/_hamburger.scss
@@ -11,10 +11,10 @@ background-color: transparent;
 border: 0;
 margin: 0;
 overflow: visible; }
-.hamburger:hover {
-    opacity: 0.7; }
-.hamburger.is_active:hover {
-    opacity: 0.7; }
+// .hamburger:hover {
+//     opacity: 0.7; }
+// .hamburger.is_active:hover {
+//     opacity: 0.7; }
 .hamburger.is_active .hamburger_inner,
 .hamburger.is_active .hamburger_inner::before,
 .hamburger.is_active .hamburger_inner::after {
