--- a/styles/partials/_hero.scss
+++ b/styles/partials/_hero.scss
@@ -1,26 +1,32 @@
+
 header li {
     display: inline-block;
 }
 
 nav {
-    height: 6.65vh;
+    height: 8vh;
 }
 
 
 .nav_list {
     position: absolute;
     z-index: 10;
-    // transform: translateX(100%);
 }
 
 .nav_list li {
     display: none;
+    cursor: pointer;
+    transition: color 0.25s linear;
+}
+
+.nav_list li:hover {
+    color: $accent-color;
 }
 
 //toggle nav bar
 .nav_mobile {
     padding-left: 0;
-    width: 50%;
+    width: 52.5vw;
     position: absolute;
     background: #fff;
     z-index: 20;
@@ -32,25 +38,37 @@ nav {
 .nav_mobile li {
     display: block;
     border: 1px solid $text-color;
-    padding: 6.5px 0 6.5px 10px;
+    padding: 1.75vh 0 1.75vh 1.75vh;
+// }
 }
 
 
 .hamburger {
-    padding-top: 1.25vh;    
+    padding: 1.75vh 0 0 0;    
     float: right;
     position: relative;
     z-index: 20;
-    // sit on top of the overlay
+}
+
+.hamburger:hover .hamburger_inner,
+.hamburger:hover .hamburger_inner::before,
+.hamburger:hover .hamburger_inner::after {
+    background-color: $accent-color;
+}
+
+.hamburger.is_active:hover .hamburger_inner,
+.hamburger.is_active:hover .hamburger_inner::before,
+.hamburger.is_active:hover .hamburger_inner::after {
+    background-color: $accent-color;
 }
 
 .fullbleed {
-    height: 90vh;
-    padding-top: 35vh;
+    height: calc(100vh - 2.5vh - 10vh);
+    padding-top: 25vh;
     background-image: url('../assets/ales-nesetril-734016-unsplash.jpg');
     background-size: cover;
     background-position-x: 17.8%;
-    margin-bottom: 3.35vh;
+    margin-bottom: 2.5vh;
 }
 
 .fullbleed::before {
@@ -59,9 +77,9 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    height: 90vh;
+    height: calc(100vh - 2.5vh - 10vh);
     z-index: 10;
-    margin-top: 6.65vh;
+    margin-top: 8vh;
     background: rgba(158, 156, 156, 0.2);
 }
 
@@ -77,13 +95,15 @@ nav {
     text-align: center;
     position: relative;
     color: #fff;
+    line-height: 1;
+    text-shadow: 1px 1px 25px $text-color;
 }
 
 .hello,
 .dev-life {
     display: block;
     font-size: 1rem;
-    line-height: 0.2;
+    line-height: 2.5;
     font-weight: 500;
 }
 
@@ -92,14 +112,16 @@ nav {
     letter-spacing: 0;
     text-align: left;
     letter-spacing: 0.15rem;
+    position: relative;
 }
 
 .hello::after {
     content:'';
     height: 5px;
-    width: 8%;
+    width: 20px;
     background-color: $accent-color;
     position: absolute;
+    bottom: 40%;
     margin-left: 2.5%;
 }
 
@@ -108,15 +130,17 @@ nav {
     letter-spacing: 0.175rem;
     text-transform: uppercase;
     text-align: right;
+    position: relative;
 }
 
 .dev-life::before {
     content:'';
     height: 5px;
-    width: 8%;
+    width: 20px;
     background-color: $accent-color;
     position: absolute;
-    margin-left: -11.5%;
+    margin-left: -10.5%;
+    bottom: 40%;
 }
 
 .intro button { 
