--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,3 +2,8 @@
 @import './partials/_universals.scss';
 @import './partials/_hero.scss';
 @import './partials/_hamburger.scss';
+@import './partials/_about.scss';
+@import './partials/_skills.scss';
+@import './partials/_portfolio.scss';
+@import './partials/_contact.scss';
+@import './partials/_footer.scss';
