--- a/styles/partials/_portfolio.scss
+++ b/styles/partials/_portfolio.scss
@@ -6,10 +6,11 @@
         .button-container {
             margin-top: 5.5%;
             display: flex;
-            justify-content: space-evenly;
+            justify-content: space-around;
         }
         button {
-            width: 80px;
+            width: 100px;
+            @include box-shadow(0, 2px, 2px, 0.6);
         }
     }
 
@@ -31,7 +32,6 @@
         }
 
         p:last-child {
-            // color: $secondary-color;
             font-size: 0.825rem;
         }
 
@@ -59,8 +59,8 @@
         }
 
     }
-
 }
+
 .project1 {
     .project_imgContainer {
         @include box-shadow (0px, 0px, 10px, 0.6);
