changed contact form border color

--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -14,7 +14,7 @@
     
         input, textarea {
             padding-left: 2.5%;
-            border: 1px solid rgb(277, 277, 277);
+            border: 1px solid $secondary-color;
             transition: border 0.25s;
         }
 
