added scrolling effects and links work now

--- a/styles/partials/_hero.scss
+++ b/styles/partials/_hero.scss
@@ -1,3 +1,6 @@
+.nav_wrapper {
+    width: 95%
+}
 
 header li {
     display: inline-block;
@@ -39,7 +42,6 @@ nav {
     display: block;
     border: 1px solid $text-color;
     padding: 1.75vh 0 1.75vh 1.75vh;
-// }
 }
 
 
