--- a/styles/partials/_hamburger.scss
+++ b/styles/partials/_hamburger.scss
@@ -50,7 +50,8 @@ bottom: -10px; }
 // Spring
 .hamburger__spring .hamburger_inner {
 top: 2px;
-transition: background-color 0s 0.13s linear; }
+}
+// transition: background-color 0s 0.13s linear; }
 .hamburger__spring .hamburger_inner::before {
     top: 10px;
     transition: top 0.1s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19); }
