--- a/styles/partials/_hamburger.scss
+++ b/styles/partials/_hamburger.scss
@@ -1,9 +1,9 @@
 .hamburger {
 display: inline-block;
 cursor: pointer;
-transition-property: opacity, filter;
-transition-duration: 0.15s;
-transition-timing-function: linear;
+// transition-property: background-color, filter;
+// transition-duration: 0.5s;
+// transition-timing-function: linear;
 font: inherit;
 color: inherit;
 text-transform: none;
