--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,3 +7,4 @@
 @import './partials/_portfolio.scss';
 @import './partials/_contact.scss';
 @import './partials/_footer.scss';
+@import './partials/hover/hover.scss';
