--- a/styles/partials/_hero.scss
+++ b/styles/partials/_hero.scss
@@ -91,7 +91,7 @@ nav {
     background-image: url('../assets/ales-nesetril-734016-unsplash.jpg');
     background-size: cover;
     background-position-x: 17.8%;
-    margin-bottom: 2.5vh;
+    // margin-bottom: 3.1vh;
 }
 
 .fullbleed::before {
