--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,7 +177,9 @@ section {
   padding: 1px; }
 
 section h2 {
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  margin-top: 20%;
+  margin-bottom: 20%; }
 
 textarea, input[type="text"], input[type="email"] {
   width: 100%; }
@@ -208,7 +210,7 @@ button {
   -o-transition: all 0.25s;
   transition: all 0.25s; }
 
-.link:after {
+.link:before {
   content: '';
   position: absolute;
   width: 100%;
@@ -220,8 +222,20 @@ button {
 .link:hover {
   color: #ff4757; }
 
-.link:hover::after {
-  background-color: transparent; }
+@media (min-width: 784px) {
+  html {
+    font-size: 112.5%; }
+  .wrapper {
+    width: 80%; }
+  section h2 {
+    margin-top: 17.5%;
+    margin-bottom: 7.5%; } }
+
+@media (min-width: 1023px) {
+  html {
+    font-size: 120%; }
+  .wrapper {
+    max-width: 1600px; } }
 
 header {
   background: #fff;
@@ -300,8 +314,7 @@ nav {
   height: calc(100vh - 2.5vh - 10vh);
   background-image: url("../assets/ales-nesetril-734016-unsplash.jpg");
   background-size: cover;
-  background-position-x: 17.8%;
-  margin-bottom: 2.5vh; }
+  background-position-x: 17.8%; }
 
 .fullbleed::before {
   content: '';
@@ -480,9 +493,7 @@ nav {
 
 .about h2 {
   padding-top: 1px;
-  position: relative;
-  margin-bottom: 10%;
-  margin-top: 15%; }
+  position: relative; }
   .about h2::after {
     content: '';
     position: absolute;
@@ -492,6 +503,9 @@ nav {
     height: 3px;
     display: block;
     background-color: #ff4757; }
+
+.about_text {
+  padding-top: 2.5vh; }
 
 .about_text p:first-of-type {
   margin-top: 12.5%; }
@@ -519,10 +533,36 @@ nav {
 .accent-font {
   font-weight: 500; }
 
+@media (min-width: 784px) {
+  .about_container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+  .about_pic {
+    border-radius: 10px;
+    -ms-flex-preferred-size: 35%;
+    flex-basis: 35%;
+    height: 100%;
+    margin: 0; }
+  .about_text {
+    -ms-flex-preferred-size: 60%;
+    flex-basis: 60%; }
+  .button_cv {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 5%; }
+  .about_text p:first-of-type {
+    margin-top: 0%; } }
+
+@media (min-width: 1023px) {
+  .button_cv {
+    margin-top: 3.5%; } }
+
 .skills h2 {
-  position: relative;
-  margin-top: 20%;
-  margin-bottom: 10%; }
+  position: relative; }
   .skills h2:before {
     content: '';
     position: absolute;
@@ -555,13 +595,10 @@ nav {
   display: -ms-flexbox;
   display: flex; }
   .skill_icon .icon {
-    color: #ff4757;
-    -ms-flex-item-align: center;
-    -ms-grid-row-align: center;
-    align-self: center; }
+    color: #ff4757; }
   .skill_icon .firebase {
-    display: block;
-    width: 100%; }
+    max-width: 52px;
+    max-height: 52px; }
 
 .skill_icon:nth-child(3n + 3) {
   margin-right: 0; }
@@ -569,22 +606,23 @@ nav {
 .skill_icon:nth-child(n + 7) {
   margin-bottom: 0; }
 
-.portfolio .project_container .button-container {
-  margin-top: 5.5%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around; }
-
-.portfolio .project_container button {
-  width: 100px;
-  -webkit-box-shadow: 0 2px 2px rgba(168, 168, 168, 0.6);
-  box-shadow: 0 2px 2px rgba(168, 168, 168, 0.6); }
+@media (min-width: 784px) {
+  .skill_container {
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly; }
+  .skill_icon {
+    margin-right: 0;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .skill_icon .firebase {
+    max-width: 58.5px;
+    max-height: 58.5px; }
+  .skill_icon:nth-child(6) {
+    margin-bottom: 0; } }
 
 .portfolio h2 {
-  margin-top: 20%;
-  margin-bottom: 10%;
   position: relative; }
   .portfolio h2:before {
     content: '';
@@ -598,6 +636,23 @@ nav {
 
 .portfolio h3 {
   margin-top: 10%; }
+
+.portfolio .project_container .button-container {
+  margin-top: 5.5%;
+  padding: 0 auto;
+  text-align: center; }
+
+.portfolio .project_container button {
+  width: 100px;
+  -webkit-box-shadow: 0 2px 2px rgba(168, 168, 168, 0.6);
+  box-shadow: 0 2px 2px rgba(168, 168, 168, 0.6);
+  display: inline-block; }
+
+.portfolio .project_container button:first-child {
+  margin-right: 2.5%; }
+
+.portfolio .project_container button:last-child {
+  margin-left: 2.5%; }
 
 .portfolio .project_textContainer span {
   color: #ff4757;
@@ -620,8 +675,6 @@ nav {
   box-shadow: 0px 0px 15px rgba(168, 168, 168, 0.8); }
 
 .contact h2 {
-  margin-top: 20%;
-  margin-bottom: 10%;
   position: relative; }
 
 .contact h2:after {
@@ -2979,8 +3032,9 @@ footer {
     left: 100%;
     right: 0;
     bottom: 0;
-    background: #2098D1;
-    height: 4px;
+    background: transparent;
+    height: 1px;
+    width: 100%;
     -webkit-transition-property: left;
     -o-transition-property: left;
     transition-property: left;
