--- a/styles/partials/_hero.scss
+++ b/styles/partials/_hero.scss
@@ -29,8 +29,7 @@ nav {
 }
 
 .nav_scrolled {
-    box-shadow: 0px 3px 3px #edf6fa;
-    // @include box-shadow(0px, 2.5px, 2.5px, 0.6);
+    box-shadow: 0px 2px 2px rgba(168, 168, 168, 0.3);
 }
 
 .nav_list {
@@ -113,6 +112,7 @@ nav {
 
 .intro {
     color: #fff;
+    text-align: center;
 }
 
 .intro h1 {
@@ -120,7 +120,6 @@ nav {
     text-transform: uppercase;
     font-size: 2.85rem;
     letter-spacing: 0.35rem;
-    text-align: center;
     position: relative;
     color: #fff;
     line-height: 1;
@@ -175,3 +174,36 @@ nav {
     margin: 10% auto 0 auto;
 }
 
+@media (min-width: 1023px){
+
+    .fullbleed {
+        background-position-y: 32.5%;
+        background-position-x: 0;
+    }
+    .intro {
+        width: 50%;
+    }
+
+    .nav_wrapper {
+        height: 100%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .nav_list {
+        display: flex;
+        justify-content: space-between;
+        width: 50%;
+    }
+
+    .nav_list li {
+        display: block;
+        border: none;
+    }
+
+    nav .hamburger {
+        display: none;
+    }
+
+}
