--- a/styles/partials/_portfolio.scss
+++ b/styles/partials/_portfolio.scss
@@ -3,7 +3,7 @@
 
     h2 {
         position: relative;
-        
+
         &:before {
             @include accent-line(1.5rem);
         }
@@ -11,6 +11,10 @@
 
     h3 {
         margin-top: 10%;
+    }
+
+    .project1 h3 {
+        margin-top: 0;
     }
 
     .project_container {
@@ -67,5 +71,41 @@
 .project3 {
     .project_imgContainer {
         @include box-shadow (0px, 0px, 15px, 0.8);
+    }
+}
+
+@media (min-width: 709px){
+    .portfolio .project_container button {
+        width: 150px;
+    }
+
+    .portfolio h3 {
+        margin-top: 7.5%;
+    }
+}
+
+@media (min-width: 1023px){
+
+    .portfolio h3 {
+        margin-top: 0;
+    }
+
+    .project_container {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        margin-bottom: 7.5%;
+    }
+
+    .project2 {
+        flex-direction: row;
+    }
+
+    .project_container_top, .project_container_bottom{
+        flex-basis: 45%;
+    }
+
+    .project3 {
+        margin-bottom: 0;
     }
 }
